--- a/tests/app/src/index.html
+++ b/tests/app/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf8" />
+    <meta charset="utf-8" />
+    {{html.base.href}}
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script defer src="./index.mjs" type="module"></script>
     <link rel="stylesheet" href="./main.css" />
-    <title>Test App</title>
+    <title>svelte-common Example</title>
   </head>
-  <body></body>
 </html>
