--- a/tests/app/src/index.html
+++ b/tests/app/src/index.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script defer src="./index.mjs" type="module"></script>
     <link rel="stylesheet" href="./main.css" />
-    <title>{{title}} Example</title>
+    <title>{{name}} {{version}} Example</title>
   </head>
 </html>
