--- a/tests/app/src/index.html
+++ b/tests/app/src/index.html
@@ -5,7 +5,7 @@
     {{html.base.href}}
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script defer src="./index.mjs" type="module"></script>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>{{name}} {{version}} Example</title>
   </head>
 </html>
